# map_proj

./: .env  .gitignore  alembic.ini  enums.py  exceptions.py  load_data.py  main.py  models.py  package-lock.json  pyproject.toml  requirements.txt  routing.py  settings.py
auth/: auth.py  models.py  permissions.py  schema.py  security.py  service.py  views.py
db/: core.py
document/: models.py  schema.py  service.py  views.py
migrations/: env.py
migrations/versions/: 07c1c2ef9b32_fix.py  08baff84ae0a_add_document_relation.py  16c4d16aca24_add_document_relation.py  310172ea6f5b_fix_foreign_key_constraint.py  385b77dc0cfb_add_document_relation.py  3ecf094c6385_fix.py  495377eafb90_parcel_new_fields.py  4cff07afade1_fix.py  58ab40a94f02_parcel_new_fields.py  5c97a9d62d9c_fix_foreign_key_constraint.py  6062a4dce8cc_add_document_relation.py  66c54162e08a_fix.py  6f247e45d774_parcel_new_fields.py  72eba018d131_fix.py  783d16ea0237_fix.py  7be6bf3f70d9_add_tickets.py  87462dce95fd_parcel_new_fields.py  95a91eabc6ff_add_document_relation.py  b062d2645c79_add_document_relation.py  b092b0de84c4_fix.py  df58f06453b3_fix.py  (+7 more)
notification/: models.py  schema.py  service.py  views.py
parcel/: bulk_create.py  models.py  schema.py  service.py  views.py
poll/: models.py  schema.py  service.py  views.py
post/: models.py  schema.py  service.py  views.py
templates/: footer.html  header.html  home.html  index.html  intro.html  jumbotron.html  login.html  map.html  messages.html  navbar.html  register.html  success.html
ticket/: models.py  schema.py  service.py  views.py
(+24 files in other folders)
